$Id$

2016-10-03  Christian Franke  <franke@computer.org>

	os_win32/vc14/*.vcxproj: Add platform x64.

	os_win32.cpp: Use new enhanced version of IOCTL_STORAGE_QUERY_PROPERTY
	to access NVMe info.  This works with Windows 10 NVMe driver
	(stornvme.sys) (ticket #691).
	smartctl.8.in, smartd.8.in: Document device names.

2016-09-28  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo MiniStation HD-PZU3 (0x0411:0x01f9) (ticket #739)
	- USB: Iomega Prestige (0x059b:0x0571)
	- USB: LaCie P9223 (0x059f:0x1070)
	- USB: Seagate Expansion Desktop (0x0bc2:0x331a) (ticket #725)
	- USB: Seagate Backup Plus (0x0bc2:0xab28) (ticket #738)
	- USB: WD My Passport Ultra (0x1058:0x259d) (ticket #736)
	- USB: ASMedia ASM1351 (0x174c:0x1351)

2016-09-25  Christian Franke  <franke@computer.org>

	AUTHORS: Add Kimihiro Nonaka.

2016-09-25  Kimihiro Nonaka  <...>

	os_netbsd.cpp: Migrate to new dev_interface (ticket #101).
	Add NVMe support (ticket #728).
	Implement netbsd_ata_device::ata_pass_through().
	netbsd_nvme_ioctl.h: New file based on "sys/dev/ic/nvmeio.h" from
	NetBSD kernel sources.
	Makefile.am: Add new file.

2016-09-07  Christian Franke  <franke@computer.org>

	Makefile.am: clean-vc14 targets.

	os_win32.cpp: Decode Windows 10 build number.

	os_win32/smartd_warning.cmd: Use delayed variable expansion.

	os_win32/smartd_mailer.ps1: Use domainname for default sender address.
	os_win32/smartd_mailer.conf.sample.ps1: Update related comment.
	os_win32/smartd_warning.cmd: Remove trailing '\r' from USERDNSDOMAIN.

2016-08-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix quoting of EDITOR shortcuts.

	Send warning mails via PowerShell script on Windows (ticket #731):
	Makefile.am, os_win32/installer.nsi: Add new files.
	os_win32/smartd_mailer.ps1: New PowerShell script using Send-MailMessage
	cmdlet to send mail.
	os_win32/smartd_mailer.conf.sample.ps1: New sample config file.
	os_win32/smartd_warning.cmd: Call new script if configured.