@@ -1,5 +1,10 @@
 $Id$
 
+2016-10-17  Christian Franke  <franke@computer.org>
+
+	configure.ac: Add --with-scriptpath option.
+	smartd_warning.sh.in, update-smart-drivedb.in: Set PATH variable.
+
 2016-10-03  Christian Franke  <franke@computer.org>
 
 	os_win32/vc14/*.vcxproj: Add platform x64.
